added list to index file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam ipsum
       reprehenderit commodi corporis cum nisi quisquam est iure sunt quis.
     </h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sit nihil nulla voluptatibus illo, veritatis eum veniam animi laboriosam beatae doloremque possimus praesentium ipsam unde tempore provident eius iste aperiam.</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sit
+      nihil nulla voluptatibus illo, veritatis eum veniam animi laboriosam
+      beatae doloremque possimus praesentium ipsam unde tempore provident eius
+      iste aperiam.
+    </p>
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>Contact</li>
+    </ul>
   </body>
 </html>
